Configure DbContext + appsettings.json

--- a/LendingApi.csproj
+++ b/LendingApi.csproj
@@ -21,7 +21,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Application/" />
+    <Folder Include="Controllers/" />
     <Folder Include="Core/" />
+    <Folder Include="Data/" />
   </ItemGroup>
 
 </Project>
