--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost,1433;Database=LendingDb;User Id=SA;Password=Fitness32_;TrustServerCertificate=True;"
+  },
+  "Jwt": {
+    "Key": "LongVeryExtendedSuperSecretJwtKey123456789ABCDEFGHJKL!",
+    "Issuer": "AuthDemoApi",
+    "Audience": "AuthDemoApiUsers"
   }
 }
